# mnemo

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  getting-started.md  troubleshooting.md  v0.1.x-backlog.md
docs/specs/: 2026-04-11-mnemo-design.md  2026-04-13-mnemo-v0.2-design.md  2026-04-13-mnemo-v0.3-design.md  2026-04-15-mnemo-v0.5.x-retrieval-design.md  2026-04-15-mnemo-v0.5.x-retrieval-phased.md
npm/: .npmignore  README.md  package.json
npm/lib/: bootstrap.js  detect.js  messages.js  prompt.js  runInstall.js  runMnemo.js  runUninstall.js
npm/test/: bootstrap.test.js  detect.test.js  prompt.test.js  runInstall.test.js  runMnemo.test.js  runUninstall.test.js
src/mnemo/: __main__.py  cli.py  cli_helpers.py  statusline.py
tests/: conftest.py
tests/cli/: test_dedup_rules_cli.py  test_disable_rule.py  test_list_enforced.py
tests/core/: test_dedup_rules.py
tests/e2e/: test_full_session_cycle.py  test_real_llm.py
tests/integration/: test_auto_brain_pipeline.py  test_cli_init.py  test_extract_pipeline.py  test_hint_integration.py  test_hook_post_tool_use.py  test_hook_pre_tool_use_reflex_e2e.py  test_hook_session_end.py  test_hook_session_end_reflex_gc.py  test_hook_session_start.py  test_hook_session_start_injection.py  test_hook_session_start_reflex.py  test_hook_user_prompt.py  test_hooks_never_raise.py  test_inject_slash_commands.py  (+9 more)
tools/: sync_npm_version.py  sync_plugin_manifest.py
(+344 files in other folders)
