[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-claude"
version = "0.13.3"
description = "The Obsidian that populates itself so your Claude never forgets."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "xyrlan" }]
dependencies = []  # stdlib only — this is intentional

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mnemo = "mnemo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mnemo = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not recall'"
markers = [
    "recall: live retrieval regression suite (opt-in; runs against a real vault)",
]

[tool.coverage.run]
branch = true
source = ["src/mnemo"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
